--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorariosexamen.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/consultahorariosexamen.html.twig
@@ -20,7 +20,7 @@
             
             <div class="col-md-12">
               <div class="box-header with-border">
-                <h3 class="box-title">Horarios de Examen</h3>
+                <h3 class="box-title">Horarios de Exámen</h3>
                
             </div><!-- /.box-header -->
              <div class="box box-solid">
