--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/AlumnosIngresoAsistencia.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/AlumnosIngresoAsistencia.html.twig
@@ -50,7 +50,7 @@
                                            <td width = "5%" style="text-align: center;">{{ alumnos.id_sg_usuario }}</td>
                                             <td width = "20%" style="text-align: center;">{{ alumnos.nombres }} <input type = "hidden" value = "{{ alumnos.nombres }}" name = "{{ alumnos.id_sg_usuario }}" /></td>
                                             <td width = "20%"> <span class="button-checkbox">
-                                                                    <button type="button" class="btn" data-color="primary">Asistio</button>
+                                                                    <button type="button" class="btn" data-color="primary">Asistió</button>
                                                                     <input type="checkbox" class="hidden" value="{{ alumnos.id_sa_estudiante_carrera_materia }}" name="{{ alumnos.nombres }}" checked />
                                                                 </span></td>
                                        </tr>
