--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/docentes_carrerashorarios.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/docentes_carrerashorarios.html.twig
@@ -10,7 +10,7 @@
             </div>-->
             <!-- .panel-heading -->
             <div class="panel-body">
-                      <h2 align="center"><b>Horarios de Examenes </b></h2>
+                      <h2 align="center"><b>Horarios de Exámenes </b></h2>
               <div class="panel-group" id="accordion">
                 
                   
