--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -12,7 +12,7 @@
         <ul class="treeview-menu">
           <li><a href="{{path('docentes_consulta_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Clases</a></li>
           <li><a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-circle-o"></i> Datos Generales</a></li>
-          <li><a href="{{path('docentes_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Examen</a></li>
+          <li><a href="{{path('docentes_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Exámen</a></li>
           {#<li><a id="menuizqDoc_asistencia" href="#"><i class="fa fa-circle-o"></i> Asistencia de Alumnos</a></li>
           <li><a id="menuizqDoc_listadonotas" href="#"><i class="fa fa-circle-o"></i> Listado de Notas</a></li>#}
           {#<li><a id="menuizqDoc_vistageneral" href="#"><i class="fa fa-circle-o"></i> Vista por Asignatura</a></li>#}
@@ -55,7 +55,7 @@
                 <li><a href="{{path('admin_academico_estudiante_materias')}}"><i class="fa fa-circle-o"></i> Reporte Materias Aprobadas </a></li>
               {% endif %}
               {% if event.id_sg_opcion == ConsultaEstudiantesMateriaParalelo %}
-                <li><a href="{{path('admin_listar_estudiantes')}}"><i class="fa fa-circle-o"></i> Reporte Estudiantes por Docentes </a></li>
+                <li><a href="{{path('admin_listar_estudiantes')}}"><i class="fa fa-circle-o"></i> Reporte Estudiantes por Curso </a></li>
               {% endif %}
               {% if event.id_sg_opcion == AprobacionInscripcion %}
                 <li><a href="{{path('admin_inscripcion')}}"><i class="fa fa-circle-o"></i> Proceso Registro de Inscripción </a></li>
