--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -2,7 +2,7 @@
   <section class="sidebar">
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu">
-      <li class="header">MENU DE NAVEGACION</li>
+      <li class="header">MENU DE NAVEGACIÓN</li>
       {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilEstDoc or app.session.get('perfil') == perfilDocAdm %}
       <li class="treeview">
         <a href="{{path('SisAcademico_Docentes_home')}}">
@@ -46,7 +46,7 @@
         </a>
         <ul class="treeview-menu">
 
-          
+
           {%for event in app.session.get('data_secretario').opcion %}
               {% if event.id_sg_opcion == ReporteInscritosMatriculados %}
                 <li><a href="{{path('admin_academico_estudiante_carrera')}}"><i class="fa fa-circle-o"></i> Reporte Inscritos & Matriculados </a></li>
@@ -69,7 +69,7 @@
           {% endfor %}
         </ul>
       </li>
-     
+
       {% endif %}
 
       {% if app.session.get('perfil') == perfilCordi or app.session.get('perfil') == perfilEstCordi or  app.session.get('perfil') == perfilDocCordi %}
@@ -98,7 +98,7 @@
               {% endif %}
               {% if event.id_sg_opcion == ConsultaHorariosExamen %}
                 <li><a href="{{path('admin_consulta_horarios_examen_x_usuario')}}"><i class="fa fa-circle-o"></i> Consulta Horarios Examen </a></li>
-              {% endif %} 
+              {% endif %}
               {#% if event.id_sg_opcion == ConsultaHorariosClasesPersonalizados %}
                 <li><a href="{{path('docentes_consulta_horarios')}}"><i class="fa fa-circle-o"></i> ConsultaHorarios Clases Personalizados </a></li>
               {% endif %}
@@ -110,14 +110,14 @@
       </li>
       {% endif %}
      {#  {% if app.session.get('perfil') == perfilDoc or app.session.get('perfil') == perfilDocAdm %}#}
-     
+
         {% if app.session.get('perfil') != perfilEst %}
         <li class="treeview">
         <a href="{{path('SisAcademico_Docentes_home')}}">
           <i class="fa fa-comments-o"></i><span>Mensajes</span>
           <i class="fa fa-angle-left pull-right"></i>
         </a>
-          
+
         <ul class="treeview-menu">
           <li><a href="{{path('notificaciones_index')}}"><i class="fa fa-circle-o"></i> Envio de Mensajes</a></li>
           <li><a href="{{path('notificaciones_mensajes')}}"><i class="fa fa-circle-o"></i> Mensajes Recibidos</a></li>
@@ -126,13 +126,13 @@
           {#<li><a href="{{ path('dayscript_configuracion') }}"><i class="fa fa-circle-o"></i> Configuracion Mensajes</a></li>#}
           <!-- <li><a href="{#{ path('dayscript_configuracion') }#}"><i class="fa fa-circle-o"></i> Aprobar</a></li> -->
         </ul>
-      </li>        
+      </li>
       {% endif %}
-      
-      
-      
-      
-      
+
+
+
+
+
           <li class="treeview">
         <a href="{{path('titulacion_informacion_portal')}}">
           <i class="fa fa-question"></i><span>Información del Sitio</span>
