--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -12,7 +12,7 @@
         <ul class="treeview-menu">
           <li><a href="{{path('docentes_consulta_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Clases</a></li>
           <li><a href="{{path('SisAcademico_Docentes_home')}}"><i class="fa fa-circle-o"></i> Datos Generales</a></li>
-          <li><a href="{{path('docentes_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Exámen</a></li>
+          <li><a href="{{path('docentes_horarios')}}"><i class="fa fa-circle-o"></i> Horario de Examenmen</a></li>
           {#<li><a id="menuizqDoc_asistencia" href="#"><i class="fa fa-circle-o"></i> Asistencia de Alumnos</a></li>
           <li><a id="menuizqDoc_listadonotas" href="#"><i class="fa fa-circle-o"></i> Listado de Notas</a></li>#}
           {#<li><a id="menuizqDoc_vistageneral" href="#"><i class="fa fa-circle-o"></i> Vista por Asignatura</a></li>#}
@@ -82,7 +82,7 @@
           {%for event in app.session.get('data_coordinador').opcion %}
               {#{dump(event.id_sg_opcion)}#}
               {% if event.id_sg_opcion == GeneracionCalendarioAcademico %}
-                <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Generación Calendario Academico </a></li>
+                <li><a href="{{path('admin_academico_home')}}"><i class="fa fa-circle-o"></i> Generación Calendario Académico </a></li>
               {% endif %}
               {% if event.id_sg_opcion == GeneracionHorariosClases %}
                 <li><a href="{{path('admin_generacion_horario_docente')}}"><i class="fa fa-circle-o"></i> Generación Horarios Clases </a></li>
