--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/link_cambio_clave.html.twig
@@ -12,7 +12,7 @@
 	    box-shadow: 0 1px 1px rgba(0,0,0,0.1);">
 
 	<div style="padding: 2%;">
-		Usted se ha contactado con soporte para su cuenta de UG. Académico, Por favor proceda al siguiente enlace para que pueda restaurar su contraseña.
+		Usted se ha contactado con soporte para su cuenta de ARES, Por favor proceda al siguiente enlace para que pueda restaurar su contraseña.
 		</br>
 		</br>
 		Utilice esta contraseña <b>{{clave}}</b> para que pueda restaurarla.
