--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/base.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>UG Academico</title>
+    <title>ARES</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('images/menu/ug_logo.png') }}" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     
@@ -96,6 +96,8 @@
   <!-- fullCalendar 2.2.5 -->
   <script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/fullcalendar/fullcalendar.min.js') }}"></script>
+  <script src="{{ asset('theme/plugins/fullcalendar/lang-all.js') }}"></script>
+  
  <script src="{{ asset('theme/plugins/datatables/jquery.dataTables.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/datatables/dataTables.bootstrap.min.js') }}"></script>
   <script src="{{ asset('js/growl/jquery.growl.js') }}"></script>
@@ -111,6 +113,7 @@
   <script src="{{ asset('theme/plugins/flot/jquery.flot.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/flot/jquery.flot.resize.min.js') }}"></script>
   <script src="{{ asset('theme/plugins/flot/jquery.flot.categories.min.js') }}"></script>
+
 
 
 
