--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_academico_carrera_user.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/calendario_academico_carrera_user.html.twig
@@ -60,16 +60,17 @@
                 y    = date.getFullYear();
 
         $('#calendar').fullCalendar({
+          lang: 'es',
           header: {
             left: 'prev,next today',
             center: 'title',
             right: 'month,agendaWeek,agendaDay'
           },
           buttonText: {
-            today: 'today',
-            month: 'month',
-            week: 'week',
-            day: 'day'
+            today: 'Hoy',
+            month: 'Mes',
+            week: 'Semana',
+            day: 'Día'
           },
           //Random default events
           // events: [
