--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultaEstudiantesXCarrera.html.twig
@@ -56,12 +56,12 @@
                   </thead>
                 </table>
               </div>
-            
+
+
+
               <div class="col-md-4">
-                <div class="box box-danger" style="border-top: 1px solid #f4f4f4; margin-left: -7px;">
-                  <div class="box-header with-border">
-                    <h3 class="box-title">Estadisticas</h3>
-                  </div>
+                <div class="box box-primary" style=" margin-left: -7px;">
+                   <div class="box-header with-border"><i class="fa fa-bar-chart-o"></i><h3 class="box-title">Estadisticas</h3></div>
                   <div class="box-body">
                     <div class="row">
                       <div class="col-md-8">
