--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/estudiantes_anulacion_materias2.html.twig
@@ -1,24 +1,21 @@
 {% if (banderaMatricula==4 )%}
 
     <div class="col-lg-12">
-            <b>{{ estudiante }}</b> Usted se encuentra matriculado en las siguientes materias:
-            <table class="table table-striped table-bordered" id ="Table_Anulacion_Materia">
-
-                     <thead>
+            <p style="font-size:14px;"><b>{{ estudiante }}</b><br> Usted se encuentra matriculado en las siguientes materias:</p>
+            <table  style="font-size:14px;" class="table table-bordered table-hover" id ="Table_Anulacion_Materia">
+                <caption STYLE="text-align:center;font-size: 15px;"><label>Periodo  {{ cicloencurso }}</label></caption>
+                     <thead style="background-color: #3C8DBC;color:#fff;">
                         <tr>
-                                <th colspan="6" style="text-align: center !important;background-color: #337AB7 !important;color: white!important;">Periodo  {{ cicloencurso }}</th>
-                        </tr>
-                        <tr>
-                            <th style="text-align: center !important;" >Nivel</th>
-                            <th style="text-align: center !important;" >Id Materias</th>
-                            <th style="text-align: center !important;" >Nombre Materias</th>
-                            <th style="text-align: center !important;" >Veces</th>
-                            <th style="text-align: center !important;" >Curso</th> 
+                            <th style="text-align: center;" >Nivel</th>
+                            <th style="text-align: center;" >Id Materias</th>
+                            <th style="text-align: center;" >Nombre Materias</th>
+                            <th style="text-align: center;" >Veces</th>
+                            <th style="text-align: center;" >Curso</th> 
                             {% if (solicitudenProceso==0) %}
-                                <th style="text-align: center !important;" >Sel.</th> 
+                                <th style="text-align: center;" >Sel.</th> 
                              {% endif %}
                              {% if (solicitudenProceso==1) %}
-                                <th style="text-align: center !important;" >Mensaje</th> 
+                                <th style="text-align: center;" >Mensaje</th> 
                             {% endif %}
                             
                             
@@ -62,7 +59,6 @@
                
            </table>
         </div>
-
 
         <script>
 
