--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarmatricula.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarmatricula.html.twig
@@ -1,12 +1,10 @@
 {% block listadoMaterias %}
   
             <div class="col-lg-12">
-                <b>{{ estudiante }}</b> Usted se encuentra matriculado en las siguientes materias:
+                <p><b>{{ estudiante }}</b><br> Usted se encuentra matriculado en las siguientes materias:</p>
             	<table class="table table-striped table-bordered" id ="">
+                    <caption STYLE="text-align:center;font-size: 15px;"><label>Periodo</label></caption>
             	         <thead>
-            	            <tr>
-                                    <th colspan="5" style="text-align: center !important;background-color: #337AB7 !important;color: white!important;">Periodo  </th>
-            	            </tr>
                             <tr>
                                 <th style="text-align: center !important;">Nivel</th>
                                 <th style="text-align: center !important;">Id Materias</th>
