--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -1,4 +1,7 @@
-.tab-content{font-size: 12px !important;}
+.navbar-nav>.user-menu>.dropdown-menu>li.user-header>img {
+  background: white !important;
+}
+.tab-content{font-size: 10px !important;}
 
 .panel-group .panel .panel-title {
     font-size: 85% !important;
