--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/login.html.twig
@@ -139,11 +139,11 @@ function login(){
     var html =
         '   <div class="form-row">' +
         '       <input id="username" type="text" name="username" onkeypress="return SoloNumeros(event);" onkeydown="enterT(event)" maxlength="10"' +
-        '       placeholder="Username"  required /> <p class="help-block"></p>' +
+        '       placeholder="Identificación"  required /> <p class="help-block"></p>' +
         '   </div>' +
         '   <div class="form-row">' +
         '       <input id="password" type="password" onkeydown="enterB(event)" name="password" ' +
-        '       placeholder="Password" required /> <p class="help-block"></p>' +
+        '       placeholder="Contraseña" required /> <p class="help-block"></p>' +
         '   </div>' +
         '   <div class="form-row">' +
         '   <div class="form-row">' +
