--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultahorariosgenerales.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Admin/consultahorariosgenerales.html.twig
@@ -65,11 +65,11 @@
            <div class="box box-solid">
 			       
 				        <table class="table table-striped table-bordered table-hover" id="sample_1">
-				        <thead>
+				        <thead style="background-color: #3C8DBC;color:#fff">
 				        <tr>
-					        <th> Codigo </th>	
-                                                <th> Docente </th>	
-					        <th> Descripcion   </th>					       
+					        <th style="text-align: center"> Código </th>	
+                                                <th style="text-align: center"> Docente </th>	
+					        <th style="text-align: center"> Descripción   </th>					       
                                                 <th style="text-align: center">Descargar</th>
 				        </tr>
 				        </thead>
