--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarsolicitudes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Estudiantes/listarsolicitudes.html.twig
@@ -48,7 +48,7 @@
 				      
                                      
                                      <table class="table table-striped table-bordered table-hover" id="sample_1">
-				        <thead>
+				        <thead style="background-color: #3C8DBC;color:#fff">
 				        <tr>
 					       <th style="text-align: center"> Solicitud </th>	
 					        <th style="text-align: center"> Descargar   </th>
