--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_lateral.html.twig
@@ -62,19 +62,19 @@
                 <li><a href="{{path('admin_listar_estudiantes')}}"><i class="fa fa-circle-o"></i> Consult Estud. Materia Paralelo </a></li>
               {% endif %}
               {% if event.id_sg_opcion == AprobacionInscripcion %}
-                <li><a href="{{path('admin_inscripcion')}}"><i class="fa fa-circle-o"></i> Aprobacion Inscripcion </a></li>
+                <li><a href="{{path('admin_inscripcion')}}"><i class="fa fa-circle-o"></i> Aprobación Inscripción </a></li>
               {% endif %}
               {% if event.id_sg_opcion == LegalizacionOrdenPago %}
-                <li><a href="{{path('admin_carreras_ordenpago')}}"><i class="fa fa-circle-o"></i> Legalizacion Orden Pago </a></li>
+                <li><a href="{{path('admin_carreras_ordenpago')}}"><i class="fa fa-circle-o"></i> Legalización Orden Pago </a></li>
               {% endif %}
               {% if event.id_sg_opcion == AnulacionMateria %}
-                <li><a href="{{path('admin_anulacion')}}"><i class="fa fa-circle-o"></i> Anulacion Materia </a></li>
+                <li><a href="{{path('admin_anulacion')}}"><i class="fa fa-circle-o"></i> Anulación Materia </a></li>
               {% endif %}  
               {% if event.id_sg_opcion == AnulacionMateria %}
-                <li><a href="{{path('admin_generacion_horario_docente')}}"><i class="fa fa-circle-o"></i> Generacion Horario Docente </a></li>
+                <li><a href="{{path('admin_generacion_horario_docente')}}"><i class="fa fa-circle-o"></i> Generación Horario Docente </a></li>
                 {% endif %}  
               {% if event.id_sg_opcion == AnulacionMateria %} 
-               <li><a href="{{path('admin_generacion_horarios_examenes')}}"><i class="fa fa-circle-o"></i> Generacion Horario Examen </a></li>
+               <li><a href="{{path('admin_generacion_horarios_examenes')}}"><i class="fa fa-circle-o"></i> Generación Horario Examen </a></li>
                {% endif %}  
                {#{% if event.id_sg_opcion == AnulacionMateria %}
                 <li><a href="{{path('admin_generacion_horario_examen')}}"><i class="fa fa-circle-o"></i> Generacion Horario Examen </a></li>
