--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/eventos_universidad.html.twig
@@ -40,7 +40,7 @@
         <p id="Texto"></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
       </div>
     </div>
 
@@ -64,14 +64,14 @@
                                        
 			         <div class="box box-solid">
 				        <table class="table table-striped table-bordered table-hover" id="sample_1">
-				        <thead>
+				        <thead style="background-color: #3C8DBC;color:#fff">
 				        <tr>
-					        <th> Tipo </th>	
-                                                  <th> Emisor </th>
-					        <th> Asunto   </th>
-					        <th> Detalle </th>
-					        <th>Fecha de Envio</th>
-                                                <th>Ver Mensajes</th>
+					        <th style="text-align: center"> Tipo </th>	
+                                                  <th style="text-align: center"> Emisor </th>
+					        <th style="text-align: center"> Asunto   </th>
+					        <th style="text-align: center"> Detalle </th>
+					        <th style="text-align: center">Fecha</th>
+                                                <th style="text-align: center">Ver</th>
 				        </tr>
 				        </thead>
 				        <tbody>
