--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Notificaciones/index_notificaciones.html.twig
@@ -80,7 +80,7 @@
         <p id="Texto"></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
       </div>
     </div>
 
@@ -184,7 +184,7 @@
 			         <div class="form-wizard">
                                     <div class="form-body">
 				        <table class="table table-striped table-bordered table-hover" id="sample_1">
-				        <thead>
+				        <thead style="background-color: #3C8DBC;color:#fff">
 				        <tr>
 					        <th style="text-align: center"> Tipo </th>					       
 					        <th style="text-align: center"> Asunto   </th>
